# autorooms

./: .gitignore  README.md  autorooms.py  pyproject.toml  requirements.txt  setup.cfg
autorooms/: __init__.py  __main__.py  bot.py
autorooms/extensions/: __init__.py
autorooms/extensions/autorooms/: __init__.py  antispam.py  autorooms.py
