[metadata]
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
description = Zero Config Autoroom Discord Bot
license_file = LICENSE
author = Michael Hall
name = discord-autorooms
version= attr: autorooms.__version__   
url = https://github.com/mikeshardmind/autorooms
author_email = michael@michaelhall.tech
classifiers = 
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Communications :: Chat
    Natural Language :: English

[options]
packages = find_namespace:
python_requires = >=3.8,<3.12
install_requires =
    discord.py==2.1.0

[options.extras_require]
uvloop =
    uvloop

[options.entry_points]
console_scripts =
    discord-autorooms=autorooms.__main__:main

[options.packages.find]
include =
    autorooms
